--- a/package.json
+++ b/package.json
@@ -11,8 +11,12 @@
   "license": "ISC",
   "private": true,
   "devDependencies": {
+    "babel-core": "^6.26.0",
     "babel-eslint": "^8.0.2",
-    "babelify": "^6.2.0",
+    "babel-plugin-transform-runtime": "^6.23.0",
+    "babel-preset-env": "^1.6.1",
+    "babel-preset-stage-0": "^6.24.1",
+    "babelify": "^8.0.0",
     "browserify": "^11.0.1",
     "busboy": "^0.2.9",
     "closest": "0.0.1",
@@ -22,7 +26,7 @@
     "eslint": "^4.10.0",
     "express": "^4.13.3",
     "gulp": "^3.9.0",
-    "gulp-babel": "^5.2.1",
+    "gulp-babel": "^7.0.0",
     "gulp-define-module": "^0.1.3",
     "gulp-develop-server": "^0.4.3",
     "gulp-handlebars": "^4.0.0",
